# unsloth-ui-demo

./: .gitignore  build.sh  pyproject.toml  setup.sh
backend/: colab.py  requirements.txt  run.py
backend/api/: __init__.py  main.py
backend/api/core/: config.py
backend/api/routes/: demo.py  init.py
backend/requirements/: extras.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: Header.jsx  Header.tsx  SystemInfo.jsx  SystemInfo.tsx
frontend/src/pages/: HomePage.jsx  HomePage.tsx  TrainingPage.jsx  TrainingPage.tsx
frontend/src/services/: api.js  api.ts
frontend/src/types/: index.ts
roland_ui_demo/: cli.py  installer.py
roland_ui_demo/requirements/: __init__.py
roland_ui_demo/scripts/: __init__.py  build_llama_cpu.ps1  build_llama_cuda.ps1  setup.ps1  setup.sh
unsloth/: __init__.py  cli.py
unsloth/studio/: __init__.py
unsloth/studio/backend/: main.py
