[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-roland-test"
version = "0.1.0"
description = "Unsloth - Fine-tune LLMs faster"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.27.0",
    "psutil",
    "nest-asyncio>=1.5.8",
]

[project.scripts]
roland-ui-demo = "roland_ui_demo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roland_ui_demo*"]

[tool.setuptools.package-data]
roland_ui_demo = ["studio/frontend/build/**/*"]
