[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth-roland-test"
version = "0.1.0"
description = "Unsloth - Fine-tune LLMs faster"
requires-python = ">=3.9"
# NOTE: Only list lightweight deps that are safe for pip to resolve on its own.
# Heavy/order-sensitive deps (unsloth, torch, torchao, triton, etc.) are
# installed by `roland-ui-demo install` which runs the requirement files in
# backend/requirements/ sequentially with --force-reinstall / --no-deps flags.
# See roland_ui_demo/installer.py for the full ordered dependency chain.
dependencies = [
    "typer",
    "fastapi>=0.100.0",
    "uvicorn>=0.27.0",
    "pydantic",
    "psutil",
    "nest-asyncio>=1.5.8",
    "matplotlib",
    "pandas",
    "datasets==4.3.0",
    "pyjwt",
    "easydict",
    "addict",
    "gradio>=4.0.0",
]

[project.scripts]
ui-roland-test = "roland_ui_demo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roland_ui_demo*"]

[tool.setuptools.package-data]
roland_ui_demo = [
    "studio/frontend/build/**/*",
    "requirements/*.txt",
]
